--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.15.1",
     "jquery": "^3.6.1",
     "nuxt": "^2.15.7",
-    "nuxt-buefy": "^0.4.8"
-  },
-  "devDependencies": {}
+    "nuxt-buefy": "^0.4.8",
+    "vue-family-tree": "^0.1.8"
+  }
 }
