--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "apexcharts": "^3.35.5",
     "core-js": "^3.15.1",
     "jquery": "^3.6.1",
     "nuxt": "^2.15.7",
     "nuxt-buefy": "^0.4.8",
+    "vue-apexcharts": "^1.6.2",
     "vue-family-tree": "^0.1.8"
   }
 }
